@@ -2,7 +2,7 @@
  * apps/include/ftpc.h
  *
  *   Copyright (C) 2011 Gregory Nutt. All rights reserved.
- *   Author: Gregory Nutt <spudmonkey@racsa.co.cr>
+ *   Author: Gregory Nutt <gnutt@nuttx.org>
  *
  * Redistribution and use in source and binary forms, with or without
  * modification, are permitted provided that the following conditions
@@ -221,4 +221,5 @@ EXTERN FAR char *ftpc_response(SESSION handle);
 #ifdef __cplusplus
 }
 #endif
+
 #endif /* __APPS_INCLUDE_FTPC_H */
